--- a/Reston.EProc.Runner.IIS/View/pengadaan-add.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-add.html
@@ -134,6 +134,7 @@
                                 <input type="hidden" id="pengadaanId" />
                                 <input type="hidden" id="isTeam" />
                                 <input type="hidden" id="isCreated" />
+                                <input type="hidden" id="State" />
                                 <div class="box-body">
                                     <div class="row">
                                         <div class="col-md-10">
@@ -167,9 +168,9 @@
                                         </div>
                                         <div class="form-group col-md-6">
                                             <label class="title">Aturan Penawaran:</label>
-                                            <select class="form-control select2" name="AturanPenawaran" style="width: 100%;" disabled>
-                                                <option value="Price Matching">Price Matching</option>
-                                                <option value="Open Price">Open Price</option>
+                                            <select class="form-control select2" name="AturanPenawaran" style="width: 100%;" >
+                                                <option value="Price Matching">Price Matching</option>                                               
+                                                <option value="Kontrak Harga">Kontrak Harga</option>
                                             </select>
                                         </div>
                                     </div>
