--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -140,6 +140,8 @@
             <input type="hidden" id="isPersonil" />
             <input type="hidden" id="State" />
             <input type="hidden" id="AturanPengadaan" />
+            <input type="hidden" id="AturanPenawaran" />
+             <input type="hidden" id="Pemenang" />
             <section class="content">
                 <!-- Default box -->
                 <div class="row">
@@ -1034,10 +1036,10 @@
                 <div class="box-body" ng-controller="history">
                     <ul class="products-list product-list-in-box">
                         <li class="item" ng-repeat="histori in history" style="padding-top:1px">
-                            <div class="riwayat-info">
+                            <div class="riwayat-info"  data-toggle="tooltip" title="{{histori.Comment}}">
                                 <span class="title"><a href="#" ng-bind="histori.Nama"></a></span>
                                 <span class="pegadaan-description" ng-bind="histori.ActionDate| date:'dd/MM/yyyy h:mm:ss'"></span>
-                                <span class="pegadaan-description" data-toggle="tooltip" title="histori.Status" ng-bind="histori.Status"></span>
+                                <span class="pegadaan-description" ng-bind="histori.Status"></span>
 
                                 <span class="pegadaan-item" ng-bind="histori.Comment">
                                 </span>
