--- a/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
@@ -139,6 +139,7 @@
             <input type="hidden" id="isTEAM" />
             <input type="hidden" id="State" />
             <input type="hidden" id="AturanPengadaan" />
+            <input type="hidden" id="AturanPenawaran" />
             <input type="hidden" id="isPemenangApproved" />
             <input type="hidden" id="Pemenang" />
             <section class="content">
