monitoring pembayaran, monitoring pekerjaan, monitoring detail, monitoring proyek add, sistem monitoring

--- a/Reston.EProc.Runner.IIS/View/monitoring-proyek-add.html
+++ b/Reston.EProc.Runner.IIS/View/monitoring-proyek-add.html
@@ -432,7 +432,7 @@
                     <form id="form-tahapan-pekerjaan" role="form" class="jp-form">
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="form-group col-md-8">
+                                <div class="form-group col-md-12">
                                     <label class="title">Nama Tahapan Pekerjaan</label>
                                     <input type="text" class="form-control" name="nama-tahapan-pekerjaan" id="nama-tahapan-pekerjaan">
                                 </div>
@@ -440,13 +440,21 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="form-group col-md-5">
+                                <div class="form-group col-md-6">
                                     <label class="title">Tanggal Pekerjaan Mulai</label>
                                     <input id="tanggal-pekerjaan-mulai" type="text" class="tanggal-tahapan form-control datepicker input-group dateJadwal">
                                 </div>
-                                <div class="form-group col-md-5">
+                                <div class="form-group col-md-6">
                                     <label class="title">Tanggal Pekerjaan Sampai</label>
                                     <input id="tanggal-pekerjaan-selesai" type="text" class="tanggal-tahapan form-control datepicker input-group dateJadwal">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group col-md-4">
+                                    <label class="title">Bobot Pekerjaan (%)</label>
+                                    <input type="text" class="form-control" name="bobot-pekerjaan" id="bobot-pekerjaan">
                                 </div>
                             </div>
                         </div>
